--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,73 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+/*Característica del contenedor principal*/
+.main{
+    padding: 20px;
+}
+/*Características de la columna (Reloj)*/
+.clock{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90px;
+    font-size: 4rem;
+}
+/*Características de las columnas (números)*/
+.digit{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.178);
+    height: 90px;
+    font-size: 4rem;
+    margin: 1px 10px 1px 1px;
+}
+/*Características del Botón*/
+.reset{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/*Adaptaciones móviles para cada componente*/
+@media screen and (max-width: 768px){
+    .main{
+        padding: 0.625rem;
+    }
+    .clock{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 2.5rem;
+        font-size: 1rem;
+        margin-left: -1.56rem;
+    }
+    .digit{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(0, 0, 0, 0.178);
+        height: 2.5rem;
+        font-size: 1rem;
+        margin: 0.06rem 0.25rem 0.06rem 0.06rem;
+    }
+    .reset{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .button-reset{
+        width: 2.5rem;
+        height: 1.25rem;
+        font-size: 0.7rem;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 1.25rem;
+    }
+}
